게시글 등록 API 정리
